tests/fixtures/should_fail/invalid_union_reference.bop

union Whattheheck {
  Sxxx(1): mut { xxxx: bool; }
  Syyy(2): mut { yy: bool; }
}

mut struct O {
  y: Sxxx;
}
